--- a/request.html
+++ b/request.html
@@ -48,11 +48,11 @@
         <form id="email-form" name="email-form" data-name="Email Form" accept-charset="UTF-8" action="https://usebasin.com/f/991e340a5268" enctype="multipart/form-data" method="POST">
           <div class="form-item"><label for="name" class="label">Your Email</label><input type="email" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="user@gmail.com" id="name" required=""></div>
           <div class="form-item"><label for="email" class="label">Your Original Site URL<br></label><input type="text" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="https://myproject.com" id="email" required=""></div>
-          <div class="form-item"><label for="email-2" class="label">New Subdomain X (x.1na.no or x.nanos.cc)<br></label><input type="text" class="w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="subdomain.1na.no or subdomain.nanohost.cc" id="email-2" required=""></div>
+          <div class="form-item"><label for="email-2" class="label">New Subdomain X (x.1na.no or x.nanos.cc)<br></label><input type="text" class="w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="subdomain.1na.no or subdomain.nanos.cc" id="email-2" required=""></div>
           <div class="form-item"><label for="email-3" class="label">Site description<br></label><textarea placeholder="Please give a short summary of your intended use, cancellation request or any other questions." maxlength="5000" id="field" name="field" required="" class="w-input"></textarea></div>
           <div class="form-item"><input type="text" id="honey" name="BOTS_ONLY" maxlength="100"></div>
           <label class="w-checkbox form-checkbox"><div class="w-checkbox-input w-checkbox-input--inputType-custom"></div><input type="checkbox" id="I Accept the ToS" name="I-Accept-the-ToS" data-name="I Accept the ToS" required="" style="opacity:0;position:absolute;z-index:-1"><span for="I Accept the ToS" class="checkbox-label links w-form-label"></span><a href="#" class="links links-blue">I accept the ToS</a></label>
-          <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
+          <div class="g-recaptcha" data-sitekey="6Ldrr8IUAAAAAB6oKDAzrWiUt9dI0jpIQTsDn7jG"></div>
           <input type="submit" value="Request " data-wait="Please wait..." class="submit-button w-button"></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
