--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[things]</div>
-          </div><a href="#" class="domain-btn w-button">things.1na.no</a>
+          </div><a href="https://things.1na.no" class="domain-btn w-button">things.1na.no</a>
         </div>
 
         <div class="domains-card">
@@ -73,7 +73,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[music]</div>
-          </div><a href="#" class="domain-btn w-button">music.nanos.cc</a>
+          </div><a href="https://music.nanos.cc" class="domain-btn w-button">music.nanos.cc</a>
         </div>
 
         <div class="domains-card">
@@ -83,7 +83,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[btraffic]</div>
-          </div><a href="#" class="domain-btn w-button">btraffic.nanos.cc</a>
+          </div><a href="https://btraffic.nanos.cc" class="domain-btn w-button">btraffic.nanos.cc</a>
         </div>
 
         <div class="domains-card">
@@ -93,7 +93,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[qr]</div>
-          </div><a href="#" class="domain-btn w-button">qr.nanos.cc</a>
+          </div><a href="https://qr.nanos.cc" class="domain-btn w-button">qr.nanos.cc</a>
         </div>
 
         <div class="domains-card">
@@ -103,7 +103,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[msg]</div>
-          </div><a href="#" class="domain-btn w-button">msg.nanos.cc</a>
+          </div><a href="https://msg.nanos.cc" class="domain-btn w-button">msg.nanos.cc</a>
         </div>
 
         <div class="domains-card">
@@ -113,7 +113,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[nanoslo]</div>
-          </div><a href="#" class="domain-btn w-button">nanoslo.1na.no</a>
+          </div><a href="https://nanoslo.1na.no" class="domain-btn w-button">nanoslo.1na.no</a>
         </div>
       </div>
     </div>
