--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[music]</div>
-          </div><a href="https://music.nanos.cc" class="domain-btn w-button">music.nanos.cc</a>
+          </div><a href="http://music.nanos.cc" class="domain-btn w-button">music.nanos.cc</a>
         </div>
 
         <div class="domains-card">
