--- a/request.html
+++ b/request.html
@@ -51,7 +51,7 @@
           <div class="form-item"><label for="subdomain" class="label">New Subdomain X (x.1na.no or x.nanos.cc)<br></label><input type="text" class="w-input" maxlength="256" name="SUBDOMAIN" placeholder="subdomain.1na.no or subdomain.nanos.cc" id="subdomain" required=""></div>
           <div class="form-item"><label for="description" class="label">Site description<br></label><textarea placeholder="Please give a short summary of your intended use, cancellation request or any other questions." maxlength="5000" id="description" name="field" required="" class="w-input"></textarea></div>
           <div class="form-item"><input type="text" id="honey" name="BOTS_ONLY" maxlength="100"></div>
-          <label class="w-checkbox form-checkbox"><div class="w-checkbox-input w-checkbox-input--inputType-custom"></div><input type="checkbox" id="I Accept the ToS" required="" style="opacity:0;position:absolute;z-index:-1"><span for="I Accept the ToS" class="checkbox-label links w-form-label"></span><a href="#" class="links links-blue">I accept the ToS</a></label>
+          <label class="w-checkbox form-checkbox"><div class="w-checkbox-input w-checkbox-input--inputType-custom"></div><input type="checkbox" id="I Accept the ToS" required="" style="opacity:0;position:absolute;z-index:-1"><span for="I Accept the ToS" class="checkbox-label links w-form-label"></span><a href="tos.html" class="links links-blue">I accept the ToS</a></label>
           <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
           <input type="submit" value="Request " data-wait="Please wait..." class="submit-button w-button"></form>
         <div class="w-form-done">
