--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">NanoCards</h2>
+            <p class="domain-desc">Physical Nano Card Game</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[cards]</div>
+          </div><a href="https://cards.nanos.cc" class="domain-btn w-button">cards.nanos.cc</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">TX Highway Beta</h2>
             <p class="domain-desc">Visualizing beta network cars<br></p>
           </div>
