--- a/infos.html
+++ b/infos.html
@@ -47,7 +47,7 @@
           <h2 class="heading-2">What is this?</h2>
         </div>
         <div class="a-item">
-          <p class="paragraph">Buying a separate domain name for every project can be expensive, usually around $10-50/year/domain.We give you the option to use our domain names <strong>1na.no</strong> or <strong>nanos.cc</strong>, with each subdomain redirected to the IP or hostname of your choice.This can for example be a PC with dynamic DNS, a cloud server / Nano node with static IP or free web hosting at Github Pages.Find out more about Nano at <span class="links links-blue">nano.org</span></p>
+          <p class="paragraph">Buying a separate domain name for every project can be expensive, usually around $10-50/year/domain.We give you the option to use our domain names <strong>1na.no</strong> or <strong>nanos.cc</strong>, with each subdomain leading to the IP or hostname of your choice. This can for example be a PC with dynamic DNS, a cloud server / Nano node with static IP or free web hosting at Github Pages.Find out more about Nano at <span class="links links-blue">nano.org</span></p>
         </div>
       </div>
       <div class="qa-item">
@@ -75,7 +75,12 @@
           <h2 class="heading-2">Benefits</h2>
         </div>
         <div class="a-item">
-          <p class="paragraph">1. You save cost, the hassle of domain setup, and no fighting with SSL settings in your web server.<br>2. You get a cool and easy to remember domain name tailored for Nano<br>3. Speed optimizations, DDoS protection, rate limiting and site cache powered by Cloudflare<br>3. (Optional) Listing on this page as a free advertising of your project and increased reach in search engines.</p>
+          <p class="paragraph">1. You save cost, the hassle of domain setup, and no fighting with SSL settings in your web server.<br>
+            2. You get a cool and easy to remember domain name tailored for Nano<br>
+            3. Speed optimizations, DDoS protection, rate limiting and site cache powered by Cloudflare<br>
+            4. Your real hostname or IP will be hidden beneath the new domain and cloudflare<br>
+            5. (Optional) Listing on this page as a free advertising of your project and increased reach in search engines.
+          </p>
         </div>
       </div>
       <div class="qa-item">
