--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="main">
     <div class="w-container">
       <div>
-        <h1 class="heading">For everyone. Claim your 1na.no or nanos.cc subdomain today!</h1>
+        <h1 class="heading">For everyone. Claim your <strong>1na.no</strong> or <strong>nanos.cc</strong> subdomain today!</h1>
       </div>
       <div class="domains-wrapper">
         <div class="domains-card">
