--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">Nano Xmas Tree</h2>
+            <p class="domain-desc">Donate Nano to charity and light up the tree!</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[xmas]</div>
+          </div><a href="https://xmas.nanos.cc" class="domain-btn w-button">xmas.nanos.cc</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">Nano Music</h2>
             <p class="domain-desc">Music and art visualizer</p>
           </div>
