--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
             <div class="domains-tag-text">[nanoslo]</div>
           </div><a href="https://nanoslo.1na.no" class="domain-btn w-button">nanoslo.1na.no</a>
         </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
+            <h2 class="domains-title">Powernode Rep</h2>
+            <p class="domain-desc">Nano Node - CA</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[powernode]</div>
+          </div><a href="https://powernode.nanos.cc" class="domain-btn w-button">powernode.nanos.cc</a>
+        </div>
       </div>
     </div>
   </div>
