--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
         <h1 class="heading">For everyone. Claim your <strong>1na.no</strong> or <strong>nanos.cc</strong> subdomain today!</h1>
       </div>
       <div class="domains-wrapper">
+        
+        <div class="domains-card">
+          <div class="domains-text">
+            <h2 class="domains-title">KeyTools</h2>
+            <p class="domain-desc">Secure Nano Web Tools</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[tools]</div>
+          </div><a href="https://tools.nanos.cc" class="domain-btn w-button">tools.nanos.cc</a>
+        </div>
+
         <div class="domains-card">
           <div class="domains-text">
             <h2 class="domains-title">Nano Things</h2>
@@ -73,16 +84,6 @@
           <div class="domains-tag">
             <div class="domains-tag-text">[things]</div>
           </div><a href="https://things.1na.no" class="domain-btn w-button">things.1na.no</a>
-        </div>
-
-        <div class="domains-card">
-          <div class="domains-text">
-            <h2 class="domains-title">Nano Xmas Tree</h2>
-            <p class="domain-desc">Donate Nano to charity and light up the tree!</p>
-          </div>
-          <div class="domains-tag">
-            <div class="domains-tag-text">[xmas]</div>
-          </div><a href="https://xmas.nanos.cc" class="domain-btn w-button">xmas.nanos.cc</a>
         </div>
 
         <div class="domains-card">
@@ -113,26 +114,6 @@
           <div class="domains-tag">
             <div class="domains-tag-text">[btraffic]</div>
           </div><a href="https://btraffic.nanos.cc" class="domain-btn w-button">btraffic.nanos.cc</a>
-        </div>
-
-        <div class="domains-card">
-          <div class="domains-text">
-            <h2 class="domains-title">Offline QR</h2>
-            <p class="domain-desc">Simple JS QR reader/generator<br></p>
-          </div>
-          <div class="domains-tag">
-            <div class="domains-tag-text">[qr]</div>
-          </div><a href="https://qr.nanos.cc" class="domain-btn w-button">qr.nanos.cc</a>
-        </div>
-
-        <div class="domains-card">
-          <div class="domains-text">
-            <h2 class="domains-title">Offline Audio Messenger</h2>
-            <p class="domain-desc">Encrypted message sender/receiver</p>
-          </div>
-          <div class="domains-tag">
-            <div class="domains-tag-text">[msg]</div>
-          </div><a href="https://msg.nanos.cc" class="domain-btn w-button">msg.nanos.cc</a>
         </div>
 
         <div class="domains-card">
