--- a/infos.html
+++ b/infos.html
@@ -64,11 +64,11 @@
           <h2 class="heading-2">How does it work?</h2>
         </div>
         <div class="a-item">
-          <p class="paragraph">1. You make a request and a manual review will be made to ensure you meet our criteria.<br>2. We let <a href="https://www.cloudflare.com/dns/" class="links links-blue">Cloudflare</a> handle the DNS mapping. It includes improved speed, their <a href="https://www.cloudflare.com/ssl/" class="link"><span class="links links-blue">SSL certificate</span></a> and our subdomain for 1 year.<br>3. You may need changes at your end for example setting up github pages or link the new domain in your web server.<br>4. You will be notified before expiration with the option to renew your subdomain.</p>
+          <p class="paragraph">1. You make a request and a manual review will be made to ensure you meet our criteria.<br>2. We let <a href="https://www.cloudflare.com/dns/" class="links links-blue">Cloudflare</a> handle the DNS mapping. It includes improved speed, their <a href="https://www.cloudflare.com/ssl/" class="link"><span class="links links-blue">SSL certificate</span></a> and a subdomain for 1 year.<br>3. You may need changes at your end for example setting up github pages or link the new domain in your web server.<br>4. You will be notified before expiration with the option to renew your subdomain.</p>
         </div>
       </div>
       <div class="example-item">
-        <div class="example-text"><a href="https://music.nanos.cc/" class="links links-tag">music.nanos.cc</a> redirects to <span class="links links-tag">joohansson.github.io</span> with the use of a <a href="https://github.com/Joohansson/nanomusic/blob/master/CNAME" class="links">CNAME file</a>.</div>
+        <div class="example-text"><a href="https://tools.nanos.cc/" class="links links-tag">tools.nanos.cc</a> redirects to <span class="links links-tag">joohansson.github.io</span> with the use of a <a href="https://github.com/Joohansson/keytools/blob/gh-pages/CNAME" class="links">CNAME file</a>.</div>
         <div class="text-block">Other valid examples are 1.1.1.1, xyz.dyndns.org, mynode.io, myproject.com</div>
       </div>
       <div class="qa-item">
