--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1 class="heading">For everyone. Claim your <strong>1na.no</strong> or <strong>nanos.cc</strong> subdomain today!</h1>
       </div>
       <div class="domains-wrapper">
-        
+
         <div class="domains-card">
           <div class="domains-text">
             <h2 class="domains-title">KeyTools</h2>
@@ -93,7 +93,7 @@
           </div>
           <div class="domains-tag">
             <div class="domains-tag-text">[music]</div>
-          </div><a href="http://music.nanos.cc" class="domain-btn w-button">music.nanos.cc</a>
+          </div><a href="https://music.nanos.cc" class="domain-btn w-button">music.nanos.cc</a>
         </div>
 
         <div class="domains-card">
