--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">Nano Beta Fountain</h2>
+            <p class="domain-desc">Visualizing beta network as water<br></p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[bfountain]</div>
+          </div><a href="https://bfountain.nanos.cc" class="domain-btn w-button">bfountain.nanos.cc</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">NanOslo Rep</h2>
             <p class="domain-desc">Nano Node - Norway</p>
           </div>
