--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">Public API</h2>
+            <p class="domain-desc">Free Node RPC API</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[api]</div>
+          </div><a href="https://api.nanos.cc" class="domain-btn w-button">api.nanos.cc</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">Nano Things</h2>
             <p class="domain-desc">The original Nano store</p>
           </div>
