--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">TIX Wallet</h2>
+            <p class="domain-desc">Secure Web Wallet</p>
+          </div>
+          <div class="domains-tag">
+            <div class="domains-tag-text">[tix]</div>
+          </div><a href="https://tix.nanos.cc" class="domain-btn w-button">tix.nanos.cc</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">Nano Things</h2>
             <p class="domain-desc">The original Nano store</p>
           </div>
