--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div>
 
       <div>
-        <h2 class="heading">Games</h2>
+        <h2 class="heading">Other</h2>
       </div>
       <div class="domains-wrapper">
         <div class="domains-card">
@@ -282,8 +282,26 @@
           <div class="domains-tag">
           </div><a href="https://cards.nanos.cc" target="_blank" class="domain-btn w-button">cards.nanos.cc</a>
         </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
+            <h2 class="domains-title">NanoTicker PR</h2>
+            <p class="domain-desc">Nano Node Main Net</p>
+          </div>
+          <div class="domains-tag">
+          </div><a href="https://monitor.nanoticker.info/" target="_blank" class="domain-btn w-button">node monitor</a>
+        </div>
+  
+        <div class="domains-card">
+          <div class="domains-text">
+            <h2 class="domains-title">Json Beta Node</h2>
+            <p class="domain-desc">Nano Node Beta Net</p>
+          </div>
+          <div class="domains-tag">
+          </div><a href="https://monitor-beta.nanoticker.info/" target="_blank" class="domain-btn w-button">node monitor</a>
+        </div>
+
       </div>
-      
     </div>
   </div>
   <div class="footer">
