--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="manifest" href="images/favicon/site.webmanifest">
   <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="images/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
