--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <div class="w-container">
       <div>
         <h1 class="heading"><strong>Tools, Libraries, Articles</strong> and more for <strong>Nano</strong> Cryptocurrency</h1>
+        <p class="header-text">Created or Hosted by Json</p>
         <h2 class="heading">Wallets and Tools</h2>
       </div>
       <div class="domains-wrapper">
@@ -96,8 +97,17 @@
 
         <div class="domains-card">
           <div class="domains-text">
+            <h2 class="domains-title">Nano RPC Proxy</h2>
+            <p class="domain-desc">Protection layer for Nano nodes</p>
+          </div>
+          <div class="domains-tag">
+          </div><a href="https://github.com/Joohansson/NanoRPCProxy" target="_blank" class="domain-btn w-button">github source</a>
+        </div>
+
+        <div class="domains-card">
+          <div class="domains-text">
             <h2 class="domains-title">Public API</h2>
-            <p class="domain-desc">Free Node RPC API</p>
+            <p class="domain-desc">Free RPC API</p>
           </div>
           <div class="domains-tag">
           </div><a href="https://api.nanos.cc" target="_blank" class="domain-btn w-button">api.nanos.cc</a>
