--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="w-container">
       <div>
         <h1 class="heading"><strong>Tools, Libraries, Articles</strong> and more for <strong>Nano</strong> Cryptocurrency</h1>
-        <p class="header-text">Created or Hosted by Json</p>
+        <p class="header-text">Developed, Hosted or Maintained by Json</p>
         <h2 class="heading">Wallets and Tools</h2>
       </div>
       <div class="domains-wrapper">
@@ -71,7 +71,7 @@
         <div class="domains-card">
           <div class="domains-text">
             <h2 class="domains-title">Nault</h2>
-            <p class="domain-desc">The Nano Community Wallet</p>
+            <p class="domain-desc">The Community Wallet (core dev)</p>
           </div>
           <div class="domains-tag">
           </div><a href="https://nault.cc/" target="_blank" class="domain-btn w-button">nault.cc</a>
