--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="domains-card">
           <div class="domains-text">
             <h2 class="domains-title">Tixwallet</h2>
-            <p class="domain-desc">Very simple secure web wallet</p>
+            <p class="domain-desc">Very simple secure web wallet (fork)</p>
           </div>
           <div class="domains-tag">
           </div><a href="https://tixwallet.cc/" target="_blank" class="domain-btn w-button">tixwallet.cc</a>
@@ -217,7 +217,7 @@
         <div class="domains-card">
           <div class="domains-text">
             <h2 class="domains-title">Nano Dev List</h2>
-            <p class="domain-desc">Donate to Nano developers</p>
+            <p class="domain-desc">Donate and support developers (fork)</p>
           </div>
           <div class="domains-tag">
           </div><a href="https://nanodevlist.com/" target="_blank" class="domain-btn w-button">nanodevlist.com</a>
