--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p class="domain-desc">Very simple secure web wallet (fork)</p>
           </div>
           <div class="domains-tag">
-          </div><a href="https://tixwallet.cc/" target="_blank" class="domain-btn w-button">tixwallet.cc</a>
+          </div><a href="https://joohansson.github.io/nano-wallet/" target="_blank" class="domain-btn w-button">tixwallet.cc</a>
         </div>
 
         <div class="domains-card">
@@ -137,7 +137,7 @@
             <p class="domain-desc">Gift Paper Wallet</p>
           </div>
           <div class="domains-tag">
-          </div><a href="https://nanogift.me/" target="_blank" class="domain-btn w-button">nanogift.me</a>
+          </div><a href="https://joohansson.github.io/nanogift/" target="_blank" class="domain-btn w-button">nanogift.me</a>
         </div>
 
         <div class="domains-card">
